# panopticon

./: Cargo.toml  README.md
icsbuilder/: Cargo.toml
icsbuilder/src/: main.rs
panopticon/: Cargo.toml
panopticon-ics/: Cargo.toml
panopticon-ics/src/: autocomplete_text_widget.rs  lazy_image.rs  main.rs  timeline_widget.rs
panopticon/src/: main.rs
src/: main.rs
