[package]
name = "panopticon-ics"
version = "0.1.0"
edition="2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image"] }
image = { version = "0.25.5", features = ["png"] }
ics = "0.5.8"
sscanf = "0.4.3"
