[package]
name = "panopticon"
version = "0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["derive"] }
rand = "0.8.5"
screenshots = "0.8.2"
user-idle = "0.5.3"

