[package]
name = "panopticon"
version = "0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
screenshots = "0.8.8"
user-idle = "0.6.0"

